--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -946,6 +946,9 @@
         </property>
        </widget>
        <widget class="QPushButton" name="create_single_str_button">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="geometry">
          <rect>
           <x>30</x>
@@ -959,6 +962,9 @@
         </property>
        </widget>
        <widget class="QPushButton" name="create_single_name_str_button">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="geometry">
          <rect>
           <x>30</x>
@@ -972,6 +978,9 @@
         </property>
        </widget>
        <widget class="QPushButton" name="create_multi_str_button">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="geometry">
          <rect>
           <x>30</x>
@@ -995,6 +1004,22 @@
         </property>
         <property name="value">
          <number>0</number>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="delete_selected_str_button">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>400</y>
+          <width>221</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Жагсаалт тус бүрээр олон гудамж үүсгэх</string>
         </property>
        </widget>
       </widget>
