--- a/view/ParcelInfoDialog.ui
+++ b/view/ParcelInfoDialog.ui
@@ -87,7 +87,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-159</y>
+       <y>0</y>
        <width>600</width>
        <height>1000</height>
       </rect>
@@ -1045,6 +1045,16 @@
          </property>
          <property name="text">
           <string>Contact status</string>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="ub_parcel_type_cbox">
+         <property name="geometry">
+          <rect>
+           <x>350</x>
+           <y>77</y>
+           <width>188</width>
+           <height>22</height>
+          </rect>
          </property>
         </widget>
        </widget>
