--- a/view/NavigatorWidget.ui
+++ b/view/NavigatorWidget.ui
@@ -93,7 +93,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
@@ -108,7 +108,7 @@
           <x>5</x>
           <y>0</y>
           <width>371</width>
-          <height>431</height>
+          <height>451</height>
          </rect>
         </property>
         <property name="title">
@@ -117,8 +117,8 @@
         <widget class="QPushButton" name="get_extent_button">
          <property name="geometry">
           <rect>
-           <x>129</x>
-           <y>53</y>
+           <x>130</x>
+           <y>39</y>
            <width>111</width>
            <height>28</height>
           </rect>
@@ -130,8 +130,8 @@
         <widget class="QPushButton" name="apply_button">
          <property name="geometry">
           <rect>
-           <x>14</x>
-           <y>345</y>
+           <x>15</x>
+           <y>331</y>
            <width>153</width>
            <height>23</height>
           </rect>
@@ -143,8 +143,8 @@
         <widget class="QPushButton" name="clear_b_box_button">
          <property name="geometry">
           <rect>
-           <x>14</x>
-           <y>400</y>
+           <x>15</x>
+           <y>386</y>
            <width>153</width>
            <height>23</height>
           </rect>
@@ -156,8 +156,8 @@
         <widget class="QLabel" name="label_8">
          <property name="geometry">
           <rect>
-           <x>20</x>
-           <y>123</y>
+           <x>21</x>
+           <y>109</y>
            <width>150</width>
            <height>17</height>
           </rect>
@@ -169,8 +169,8 @@
         <widget class="QLabel" name="label_9">
          <property name="geometry">
           <rect>
-           <x>20</x>
-           <y>196</y>
+           <x>21</x>
+           <y>182</y>
            <width>150</width>
            <height>17</height>
           </rect>
@@ -182,8 +182,8 @@
         <widget class="QLabel" name="label_10">
          <property name="geometry">
           <rect>
-           <x>20</x>
-           <y>160</y>
+           <x>21</x>
+           <y>146</y>
            <width>150</width>
            <height>17</height>
           </rect>
@@ -195,8 +195,8 @@
         <widget class="QLabel" name="label_11">
          <property name="geometry">
           <rect>
-           <x>16</x>
-           <y>314</y>
+           <x>17</x>
+           <y>300</y>
            <width>71</width>
            <height>22</height>
           </rect>
@@ -208,8 +208,8 @@
         <widget class="QPushButton" name="remove_button">
          <property name="geometry">
           <rect>
-           <x>14</x>
-           <y>373</y>
+           <x>15</x>
+           <y>359</y>
            <width>153</width>
            <height>23</height>
           </rect>
@@ -224,8 +224,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>138</y>
+           <x>16</x>
+           <y>124</y>
            <width>150</width>
            <height>22</height>
           </rect>
@@ -237,8 +237,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>175</y>
+           <x>16</x>
+           <y>161</y>
            <width>150</width>
            <height>22</height>
           </rect>
@@ -250,8 +250,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>211</y>
+           <x>16</x>
+           <y>197</y>
            <width>150</width>
            <height>22</height>
           </rect>
@@ -276,8 +276,8 @@
         <widget class="QRadioButton" name="admin_unit_rbutton">
          <property name="geometry">
           <rect>
-           <x>13</x>
-           <y>106</y>
+           <x>14</x>
+           <y>92</y>
            <width>271</width>
            <height>16</height>
           </rect>
@@ -292,8 +292,8 @@
         <widget class="QDoubleSpinBox" name="extent_east_spinbox">
          <property name="geometry">
           <rect>
-           <x>250</x>
-           <y>57</y>
+           <x>251</x>
+           <y>43</y>
            <width>110</width>
            <height>20</height>
           </rect>
@@ -317,8 +317,8 @@
         <widget class="QDoubleSpinBox" name="extent_west_spinbox">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>58</y>
+           <x>11</x>
+           <y>44</y>
            <width>110</width>
            <height>20</height>
           </rect>
@@ -342,8 +342,8 @@
         <widget class="QDoubleSpinBox" name="extent_south_spinbox">
          <property name="geometry">
           <rect>
-           <x>132</x>
-           <y>85</y>
+           <x>133</x>
+           <y>71</y>
            <width>110</width>
            <height>20</height>
           </rect>
@@ -367,8 +367,8 @@
         <widget class="QDoubleSpinBox" name="extent_north_spinbox">
          <property name="geometry">
           <rect>
-           <x>130</x>
-           <y>28</y>
+           <x>131</x>
+           <y>14</y>
            <width>110</width>
            <height>20</height>
           </rect>
@@ -392,8 +392,8 @@
         <widget class="QLabel" name="label_29">
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>234</y>
+           <x>16</x>
+           <y>220</y>
            <width>150</width>
            <height>17</height>
           </rect>
@@ -405,8 +405,8 @@
         <widget class="QLabel" name="khashaa_label">
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>270</y>
+           <x>16</x>
+           <y>256</y>
            <width>150</width>
            <height>17</height>
           </rect>
@@ -421,8 +421,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>249</y>
+           <x>16</x>
+           <y>235</y>
            <width>150</width>
            <height>21</height>
           </rect>
@@ -434,8 +434,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>15</x>
-           <y>285</y>
+           <x>16</x>
+           <y>271</y>
            <width>150</width>
            <height>21</height>
           </rect>
@@ -447,8 +447,8 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>80</x>
-           <y>313</y>
+           <x>81</x>
+           <y>299</y>
            <width>86</width>
            <height>22</height>
           </rect>
@@ -460,10 +460,10 @@
         <widget class="QGroupBox" name="groupBox_2">
          <property name="geometry">
           <rect>
-           <x>170</x>
-           <y>110</y>
+           <x>171</x>
+           <y>96</y>
            <width>192</width>
-           <height>321</height>
+           <height>351</height>
           </rect>
          </property>
          <property name="font">
@@ -643,6 +643,19 @@
            <string>Нийтийн эзэмшил</string>
           </property>
          </widget>
+         <widget class="QPushButton" name="secret_parcel_button">
+          <property name="geometry">
+           <rect>
+            <x>16</x>
+            <y>315</y>
+            <width>161</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Нууцын давхарга</string>
+          </property>
+         </widget>
         </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_6">
@@ -651,7 +664,7 @@
           <x>5</x>
           <y>450</y>
           <width>371</width>
-          <height>82</height>
+          <height>71</height>
          </rect>
         </property>
         <property name="title">
